cmake_minimum_required(VERSION 3.15)
project("ylt_examples")
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/output/examples/coro_rpc)
add_subdirectory(base_examples)
add_subdirectory(file_transfer)
add_subdirectory(http_examples)

if (CORO_RPC_USE_OTHER_RPC)
  add_subdirectory(user_defined_rpc_protocol/rest_rpc)
endif()